--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -1,3 +1,12 @@
 .m1 {
       margin: 10px;
 }
+.bg-btn{
+      background: #71CFFF;
+}
+.bg-web{
+      background: #193549;
+}
+.fs-14{
+      font-size:14px;
+}
