--- a/assets/style/hello.css
+++ b/assets/style/hello.css
@@ -51,6 +51,9 @@ header{
     .icon-menu{
         /* display:block; */
     }
+    .icon-close{
+        display: block;
+    }
     .icon-menu img{
         width: 20px;
         height:20px;
