--- a/assets/style/hello.css
+++ b/assets/style/hello.css
@@ -160,6 +160,15 @@ header{
     font-size: 14px;
     font-family:NotoSans;
 }
-.btn-search button{
-    width:154px
+.btn-search{
+    width: calc(100% - 80% - 5%);
+}
+@media (max-width: 767px){
+    .btn-search{
+        width: 100%;
+        padding:0;
+    }
+    .btn-search button{
+        padding: 6px;
+    }
 }
