--- a/assets/style/hello.css
+++ b/assets/style/hello.css
@@ -15,7 +15,7 @@ header{
     height:60px
 }
 .img-logo{
-    widht:40px;
+    width:40px;
     height: 40px;
 }
 .nav-menu{
@@ -127,7 +127,7 @@ header{
         margin: 30px 0;
     }
     .icon-close img{
-        widht:20px;
+        width:20px;
         height:20px;
         float: right;
     }
@@ -137,6 +137,7 @@ header{
     
 }
 /* end full header*/
+/*----------search------------*/
 .search-job {
     background-color:#E5F2F9;
     border-radius: 6px;
@@ -171,4 +172,8 @@ header{
     .btn-search button{
         padding: 6px;
     }
+}
+/*----------search------------*/
+.register-adv button{      
+    width:30%
 }
