--- a/assets/style/hello.css
+++ b/assets/style/hello.css
@@ -174,6 +174,48 @@ header{
     }
 }
 /*----------search------------*/
+.review{
+    overflow: hidden;
+    position: relative;
+}
 .register-adv button{      
     width:30%
+}
+.review-card{
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.35);
+    border-radius: 6px;
+    min-height: 185px;
+}
+.review-content{
+    text-align:justify;
+}
+.card-shadow{
+    position:absolute;
+    top: 10px;
+    left: 10px;
+    background-color: rgb(243, 243, 243);
+    border-radius: 6px;
+    z-index:-1;
+}
+.img-quote img{
+    transform: rotate(180deg);
+}
+.img-quote{
+    top:0;
+    right:28px;
+    width:26px;
+    transform:translateY(-13px);
+}
+.nav-button{
+    color: #3882D9;
+    background: rgba(166, 234, 255, 0.52);
+    cursor: pointer;
+}
+.nav-button::hover{
+    background:#193549;
+    color: #fff;
+}
+.review-item:not(:first-child) {
+    /* Hide all images except the first */
+    display: none;
 }
