--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -11,7 +11,9 @@
 .fs-14{
       font-size:14px;
 }
-
+.text-medium{
+      font-weight: 600
+}
 @font-face{
       src:url(../font/NotoSans-Regular.ttf);
       font-family: NotoSans;
