--- a/assets/style/hello.css
+++ b/assets/style/hello.css
@@ -262,3 +262,76 @@ header{
 .wiper-slide{
     margin-right: 48px;
 }
+.color-red{
+    color:#EC1111;
+}
+.select-job{
+    display:none;
+}
+/*Responsive job-list*/
+@media(max-width: 767px){
+    .list-job{
+        display: none;
+    }
+    .select-job{
+        display:block;
+    }
+    .job-information{
+        padding:2rem;
+    }
+}
+
+
+/* lợi ích nhận được khi THAM GIA*/
+.icon-benefit {
+    border-radius: 50%;
+    padding: 2vw;
+    transform: translate(50%, -50%);
+    right: 50%;
+}
+.list-benefit{
+    margin-top: 8rem;
+}
+.list-benefit h4{
+    margin-top: 4.5rem;
+    line-height: 1.75rem;
+}
+.list-benefit p{
+    text-align:justify;
+}
+.benefit-item{
+    height: 348px;
+    border-radius:14px;
+}
+.benefit-item:hover{
+    transform: translateY(-26px);
+    transition: 1s;
+}
+/* Responsive */
+.container{
+    overflow:hidden;
+}
+@media(min-width: 768px) and (max-width: 991px){
+    .benefit-item{
+        width: 30%;
+    }
+}
+@media(min-width: 576px) and (max-width: 767px){
+    .benefit-item{
+        width: 45%;
+    }
+    .mt-10{
+        margin-top: 5rem;
+  }
+}
+@media(max-width: 576px){
+    .benefit-item{
+        width: 60%;
+    }
+    .list-benefit{
+        justify-content: center !important;
+    }
+    .mt-10s{
+        margin-top: 5rem;
+  }
+}
