--- a/assets/style/hello.css
+++ b/assets/style/hello.css
@@ -7,15 +7,16 @@
     margin:0;
     padding:0;
 }
-//header
-header{
+
+
+.header{
     background: #193549;
 }
 .header{
     height:60px
 }
 .img-logo{
-    widht:40px;
+    width: 40px;
     height: 40px;
 }
 
