--- a/assets/style/hello.css
+++ b/assets/style/hello.css
@@ -9,6 +9,9 @@
     border-radius: 6px;
     border: #B1B2CD 1px solid;
 }
+.search input{
+    width: 90%;
+}
 .input-sr:focus{
     outline:none;
 }
