--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -1,38 +1,53 @@
-
-.m1 {
-      margin: 10px;
+/* ========== Add Fonts ========== */
+/*---- Noto Sans -----*/
+@font-face {
+      font-family: 'Noto Sans Bold';
+      src: url('../font/NotoSans/NotoSans-Bold.woff2') format('woff2'),
+           url('../font/NotoSans/NotoSans-Bold.woff') format('woff'),
+           url('../font/NotoSans/NotoSans-Bold.ttf') format('ttf');
+      font-weight: bold;
+      font-style: normal;
+      font-display: swap;
 }
-
-.bg-btn{
-      background: #71CFFF;
+@font-face {
+      font-family: 'Noto Sans Regular';
+      src: url('../font/NotoSans/NotoSans.woff2') format('woff2'),
+           url('../font/NotoSans/NotoSans.woff') format('woff'),
+           url('../font/NotoSans/NotoSans-Regular.ttf') format('ttf');
+      font-weight: normal;
+      font-style: normal;
+      font-display: swap;
 }
-.bg-web{
-      background: #193549;
+@font-face {
+      font-family: 'Noto Sans Bold Italic';
+      src: url('../font/NotoSans/NotoSans-BoldItalic.woff2') format('woff2'),
+           url('../font/NotoSans/NotoSans-BoldItalic.woff') format('woff'),
+           url('../font/NotoSans/NotoSans-BoldItalic.ttf') format('ttf');
+      font-weight: bold;
+      font-style: italic;
+      font-display: swap;
 }
-.fs-14{
-      font-size:14px;
+@font-face {
+      font-family: 'Noto Sans Italic';
+      src: url('../font/NotoSans/NotoSans-Italic.woff2') format('woff2'),
+           url('../font/NotoSans/NotoSans-Italic.woff') format('woff'),
+           url('../font/NotoSans/NotoSans-Italic.ttf') format('ttf');
+      font-weight: normal;
+      font-style: italic;
+      font-display: swap;
 }
-.text-medium{
-      font-weight: 600
-}
-/*----font Noto sans-----*/
+  
+      
 @font-face{
-      src:url(../font/NotoSans-Regular.ttf);
+      src: url(../font/NotoSans-Regular.ttf);
       font-family: NotoSans;
 }
+
 @font-face{
-      src:url(../font/NotoSans-Bold.ttf);
+      src: url(../font/NotoSans-Bold.ttf);
       font-family: NotoSansBold;
 }
-.text-noto-b{
-      font-family:NotoSansBold;
-}
-.text-noto-re{
-      font-family:NotoSans;
-}
-.clear{
-      clear: both;
-}
+
 
 /*----font Roboto-----*/
 @font-face{
@@ -66,4 +81,47 @@
 }
 .text-worksans-re{
       font-family: WorkSansRegular;
+}
+
+
+.m1 {
+      margin: 10px;
+}
+
+.bg-btn{
+      background: #71CFFF;
+}
+.bg-web{
+      background: #193549;
+}
+.fs-14{
+      font-size:14px;
+}
+.text-medium{
+      font-weight: 600
+}
+
+.text-noto-b{
+      font-family:NotoSansBold;
+}
+.text-noto-re{
+      font-family:NotoSans;
+}
+.clear{
+      clear: both;
+}
+
+/* ========== Custom Font Family ========== */
+/* ---------- Noto Sans ---------- */
+.font-NotoSans-Bold {
+      font-family: 'Noto Sans Bold';
+}
+.font-NotoSans-BoldItalic {
+      font-family: 'Noto Sans Bold Italic';
+}
+.font-NotoSans-Italic {
+      font-family: 'Noto Sans Italic';
+}
+.font-NotoSans-Regular {
+      font-family: 'Noto Sans Regular';
 }
