--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -16,13 +16,11 @@ header{
     height: 40px;
 }
 .nav-menu{
-    font-family: NotoSans;
     letter-spacing:0.5px;
     font-weight:400;
     font-size: 14px;
 }
 .btn-employer{
-    font-family: NotoSans;
     font-weight: 600;
     color: #193549;
 }
@@ -42,6 +40,12 @@ header{
     height: 100%;
     opacity: 0.8;
     z-index: 99;
+}
+.icon-notify{
+    width: 25px;
+}
+.img-user{
+    width: 65px;
 }
 @media(min-width:768px){
     .over {
