--- a/assets/style/job-description.css
+++ b/assets/style/job-description.css
@@ -19,5 +19,46 @@
     color: #000;
     line-height: 30px;
 }
+.img-company{
+    width: 90px;
+}
+#content{
+    margin: 8% 0;
+}
+.main-inf img{
+    width: 18px;
+}
+.color-blue{
+    color: #0037FB
+}
+.main-inf{
+    height: 13rem
+}
+.time-post img{
+    width: 15px;
+}
+.time-post{
+  
+    color: #666666;
+}
+.btn-post img{
+    width: 20px;
+}
+.btn-post button{
+    height: 36px;
+    width: 160px;
+}
+.button-mark button,
+.button-share button{
+    border: #71CFFF 2px solid;
 
-
+}
+.post-content p{
+    line-height: 25px;
+}
+.tag{
+    border: #ccc 1px solid;
+    background: #F3F3F3;
+    border-radius: 20px;
+    
+}
