--- a/assets/style/job-description.css
+++ b/assets/style/job-description.css
@@ -23,7 +23,7 @@
     width: 90px;
 }
 #content{
-    margin: 8% 0;
+    margin: 8rem 0;
 }
 .main-inf img{
     width: 18px;
@@ -60,5 +60,19 @@
     border: #ccc 1px solid;
     background: #F3F3F3;
     border-radius: 20px;
-    
+
+}
+.web-img{
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border:#9F9F9F 1px solid;
+    padding: 3px 7px;
+}
+.introduce-company{
+    border-radius: 6px;
+    border: 2px solid #C5C5C5;
+}
+.introduce-company p{
+    text-align: justify;
 }
