--- a/assets/style/header.css
+++ b/assets/style/header.css
@@ -59,7 +59,27 @@ header{
 .dropdown li:hover{
     background: #BFE9FF;
 }
+.accordion-button::after{
+    background-image: url(../image/down-arrow.png);
+    margin-left: 6px;
+    
+}
+.control-user{
+    width: 30%;
+    padding:0;
+}
+.dropdown{
 
+    width: 200px;
+    top: 110%;
+    right:0;
+    box-shadow: 2px 2px 6px #a7a7a7;
+}
+.dropdown li a{
+    text-decoration: none;
+    color: #000;
+    line-height: 30px;
+}
 @media(min-width:768px){
     .over {
         display:none !important;
