--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -33,9 +33,31 @@ a {
       clear: both;
 }
 
+.ms-240 {
+      margin-left: 240px;
+}
+
 .mx-120 {
       margin-left: 120px;
       margin-right: 120px;
+}
+
+.mx-40 {
+      margin-left: 40px;
+      margin-right: 40px;
+}
+
+.mx-20 {
+      margin-left: 20px;
+      margin-right: 20px;
+}
+
+.mt-120 {
+      margin-top: 120px;
+}
+
+.mt-40 {
+      margin-top: 40px;
 }
 
 .ms-120 {
@@ -44,4 +66,13 @@ a {
 
 .ms-40 {
       margin-left: 40px;
+}
+
+.my-120 {
+      margin-top: 120px;
+      margin-bottom: 120px;
+}
+
+.text-gray {
+      color: #626262;
 }
