--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -12,6 +12,12 @@ a {
       color: #fff;
 }
 
+p {
+      margin: 0;
+      padding: 0;
+      margin-block: 0;
+}
+
 .m1 {
       margin: 10px;
 }
