--- a/assets/style/manage-post.css
+++ b/assets/style/manage-post.css
@@ -76,3 +76,59 @@
 #main .post-basic-information .information-field .value {
       width: 60%;
 }
+
+#main .dividing-line {
+      margin-top: 20px;
+      margin-bottom: 20px;
+      width: 100%;
+      height: 2px;
+      background-color: #c5c5c5;
+}
+
+#main .post-details {
+      padding-left: 30px;
+      padding-right: 15px;
+}
+
+#main .detail-item {
+      margin-top: 25px;
+}
+
+#main .list-required-skills {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      margin-top: 20px;
+      text-transform: uppercase;
+}
+
+#main ul.list-required-skills {
+      list-style-type: none;
+}
+
+#main .list-required-skills li {
+      background-color: #d9d9d9;
+      width: 180px;
+      text-align: center;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      border-radius: 45px;
+}
+
+#main .post-actions {
+      margin-top: 30px;
+      width: 100%;
+}
+
+#main .post-actions .post-button {
+      width: 180px;
+      margin-right: 10px;
+      background-color: #d9d9d9;
+      outline: none;
+      border: none;
+      padding-top: 7px;
+      padding-bottom: 7px;
+      text-transform: uppercase;
+      font-size: 14px;
+}
