--- a/assets/style/personal-profile.css
+++ b/assets/style/personal-profile.css
@@ -69,6 +69,8 @@ p{
     width: 500px;
     top: 30%;
     left: calc(50% - 250px);
+    display: none;
+    z-index: 100;
 }
 .i-close{
     width: 15px;
@@ -83,6 +85,55 @@ p{
 fieldset{
     border: 1px solid #979797;
 }
-fieldset input:focus{
-    outline: none;
+fieldset input[type='text']{
+    width: 100%
+}
+fieldset input:focus,
+fieldset select:focus,
+textarea:focus{
+    box-shadow: 0 0 4px #71CFFF;
+    outline:none;
+}
+.birthday{
+    grid-auto-flow: column;
+}
+.btn-form button{
+    border-radius:0;
+}
+.btn-form{
+    margin: auto -15px;
+}
+.over-edit{
+    display: none;
+    background: #000;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.8;
+    z-index: 99;
+}
+.bg-opacity {
+    background: #000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.6;
+    z-index: 99;
+}
+
+.edt-img-user{
+    right: calc(50% - 17px);
+    width: 35px;
+    top: calc(50% - 17px);
+    z-index: 100;
+}
+textarea{
+    border-radius: 8px;
+    border: 1px solid rgba(102, 102, 102, 0.8);
+}
+textarea::placeholder{
+    font-style: italic;
 }
