--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -37,6 +37,9 @@ p {
 .fs-14{
       font-size:14px;
 }
+.fs-16 {
+      font-size: 16px;
+}
 .text-medium{
       font-weight: 600
 }
@@ -89,7 +92,10 @@ p {
       margin-top: 80px;
 }
 
-
+.px-12{
+      padding-left: 12px;
+      padding-right: 12px;
+}
 
 .text-gray {
       color: #626262;
